@@ -90,6 +90,8 @@
  char-set:full
  )
 
+(cond-expand-provide (current-module) '(srfi-14))
+
 (dynamic-call "scm_init_srfi_14" (dynamic-link "libguile-srfi-srfi-13-14"))
 
 (define (->char-set x)
